[build-system]
requires = ["setuptools >= 64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="memoized_koinapy_wrapper"
version="0.0.1"
description="A wrapper around AG Willhelm's Koina that memoizes memory mapped results on disk."
readme="README.md"
authors=[
    {name="MatteoLacki",email="matteo.lacki@gmail.com"},
]
dependencies = [
    "koinapy",
    "cachemir",
    "pandas",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "ipython",
    "twine",
    "pytest",
]


# [project.scripts]
# example_shell_script = "memoized_koinapy_wrapper.cli.example_shell_script:example_shell_script"

[project.urls]
homepage="https://github.com/MatteoLacki/memoized_koinapy_wrapper.git"
repository="https://github.com/MatteoLacki/memoized_koinapy_wrapper.git"

[tool.uv]
reinstall-package = ["memoized_koinapy_wrapper"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memoized_koinapy_wrapper = ["data/*.csv"]
